--- a/main.html
+++ b/main.html
@@ -7,6 +7,13 @@
     <title>Document</title>
 </head>
 <body>
+	  <input id="newTodoInput" />
+    <button id="addTodoBtn">Add todo</button>
+
+    <!-- Todos will be added here -->
+    <ol id="todoList"></ol>
+
+    <script type="text/javascript" src="./script.js"></script>
     <!-- add your code here -->
 </body>
 </html>
